--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support:support-annotations:23.2.1'
+    compile 'com.google.android.gms:play-services-appindexing:9.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
