--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,20 +33,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
-
     // Google
     compile 'com.google.android.gms:play-services-auth:9.4.0'
-
     // Firebase
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.google.firebase:firebase-config:9.4.0'
     compile 'com.google.android.gms:play-services-appinvite:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
@@ -54,7 +52,6 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:9.4.0'
     // Firebase UI
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
-
     // Testing dependencies
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
@@ -62,5 +59,6 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.2.1'
     compile 'com.google.android.gms:play-services-appindexing:9.4.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
